add_executable(lab4_test FileTest.cpp UtilTest.cpp stl/StlFileTest.cpp stl/StlUtilTest.cpp ../../src/lab4/File.h ../../src/lab4/File.cpp ../../src/lab4/Point.h ../../src/lab4/Point.cpp ../../src/lab4/Shape.h ../../src/lab4/Shape.cpp ../../src/lab4/Util.h ../../src/lab4/Util.cpp ../../src/lab4/DirectPolygon.h ../../src/lab4/DirectPolygon.cpp ../../src/lab4/stl/StlFile.h ../../src/lab4/stl/StlFile.cpp ../../src/lab4/stl/StlShape.h ../../src/lab4/stl/StlShape.cpp ../../src/lab4/stl/StlUtil.h ../../src/lab4/stl/StlUtil.cpp ../../src/lab4/stl/StlDirectPolygon.h ../../src/lab4/stl/StlDirectPolygon.cpp)
target_link_libraries(lab4_test gtest gtest_main)